<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_grey"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_screen_booking"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:padding="6dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/sfpro_display"
            android:text="@string/Booking"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBooking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp">


            <LinearLayout
                android:id="@+id/llCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_booking_screen_first"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@id/clBooking">

                <FrameLayout
                    android:id="@+id/flRatingContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp">

                    <include
                        android:id="@+id/iRating"
                        layout="@layout/layout_rating" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/sfpro_display"
                    tools:text="Steigenberger Makadi" />

                <TextView
                    android:id="@+id/tvPlaceCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    app:fontFamily="@font/sfpro_display"
                    tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDataHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_booking_screen_first"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/llCity">

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brLoot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:titleText="Вылет из"
                    tools:subtitleText="Санкт-Петербург" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Страна, город"
                    tools:subtitleText="Египет, Хургада" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Даты"
                    tools:subtitleText="19.09.2023 – 27.09.2023" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brNight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Кол-во ночей"
                    tools:subtitleText="7 ночей" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brHotel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Отель"
                    tools:subtitleText="Steigenberger Makadi" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Номер"
                    tools:subtitleText="Стандартный с видом на бассейн или сад" />

                <com.example.booking.customview.customview.BookingRow
                    android:id="@+id/brFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titleText="Питание"
                    tools:subtitleText="Всё включено" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_booking_screen_first"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/llDataHotel">

                <TextView
                    android:id="@+id/tvInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/Information"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/sfpro_display" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NumberContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NumberPhone"
                    android:textColorHint="@color/grey"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/light_grey"
                    app:hintTextColor="@color/grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="phone"
                        android:textColor="@color/light_black"
                        app:boxBackgroundColor="@color/light_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/MailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Mail"
                    android:textColorHint="@color/grey"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/light_grey"
                    app:hintTextColor="@color/grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tviMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/light_black" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tvData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту"
                    android:textColor="@color/black_grey"
                    android:textSize="14sp"
                    app:fontFamily="@font/sfpro_display" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTourist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_booking_screen_first"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llInformation">

                <com.example.booking.customview.customview.TouristView
                    android:id="@+id/brTourist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:TouristIcon="@drawable/ic_arrow_down"
                    app:isExpanded="true"
                    app:titleTourist="Первый турист" />

                <com.example.booking.customview.customview.TouristView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:TouristIcon="@drawable/ic_arrow_down"
                    app:titleTourist="Второй турист" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/frAddTourist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_booking_screen_first"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llTourist">

                <include
                    android:id="@+id/iAddTourist"
                    layout="@layout/item_add_tourist"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llTourist" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/llPriceHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/bg_booking_screen_first"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/frAddTourist">

                <com.example.booking.customview.customview.PaymentRow
                    android:id="@+id/brTour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titlePayment="Тур"
                    tools:subtitlePayment="186 600 ₽" />

                <com.example.booking.customview.customview.PaymentRow
                    android:id="@+id/brFuelSurcharge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titlePayment="Топливный сбор"
                    tools:subtitlePayment="9 300 ₽" />

                <com.example.booking.customview.customview.PaymentRow
                    android:id="@+id/brServiceFee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titlePayment="Сервисный сбор"
                    tools:subtitlePayment="2 136 ₽" />

                <com.example.booking.customview.customview.PaymentRow
                    android:id="@+id/iPayment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:titlePayment="К оплате"
                    tools:subtitlePayment="198 036 ₽" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_screen_bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llPriceHotel">

                <FrameLayout
                    android:id="@+id/llBookingClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bg_board"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tvNumberSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:padding="20dp"
                        android:text="Оплатить 198 036 ₽"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </FrameLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>